--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
@@ -26,6 +27,8 @@
     "nanoid": "^5.0.6",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "pdfkit": "^0.15.0",
+    "slugify": "^1.6.6",
+    "stripe": "^16.5.0"
   }
 }
